--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
+<!--Created 15/5/2025
+Last updated 15/5/2025
+Made by Ayan Adhikari
+If you are  reading this then you are smart-->
+
 <!DOCTYPE html>
 <html>
+<!--Head + link to css file-->
 <head>
 <title>
 1 Fact for Every Brawler in Brawlstars
 </title>
 <link rel="stylesheet" href="style.css">
 </head>
-<h2>
-This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). 
-</h2>
-<image>
 
-</image>
+<!--Heading + subheading-->
+<h1>
+1 Fact For Every Brawler in Brawl Stars
+</h1>
+<h2>
+This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click on an image to access a specific bralers fact.
+</h2>
+
+<!--Image 1 (has link in it)-->
+<a>
+<div class="left">
+<img src="insert text" alt="insert text">
+</div>
+<h2>
+Shelly
+</h2>
+</a>
+
 </html>
