--- a/index.html
+++ b/index.html
@@ -18,17 +18,14 @@ If you are  reading this then you are smart-->
 1 Fact For Every Brawler in Brawl Stars
 </h1>
 <h2>
-This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click on an image to access a specific bralers fact.
+This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click on an image to access a specific brawlers fact.
 </h2>
 
 <!--Image 1 (has link in it)-->
-<a>
+<a src="Shelly.html">
 <div class="left">
-<img src="insert text" alt="insert text">
+<img src="Shelly.png" alt= "A picture of Shelly, the starter brawler.">
 </div>
-<h2>
-Shelly
-</h2>
 </a>
 
 </html>
