--- a/Shelly.html
+++ b/Shelly.html
@@ -1,1 +1,30 @@
-<!--Yo-->
+<!--Created 15/5/2025
+Last updated 15/5/2025
+Made by Ayan Adhikari
+If you are  reading this then you are smart-->
+
+<!DOCTYPE html>
+<html>
+<!--Head + link to css file-->
+<head>
+<title>
+1 Fact About Shelly
+</title>
+<link rel="stylesheet" href="style.css">
+</head>
+
+<!--Heading + subheading-->
+<h1>
+1 Fact About Shelly
+</h1>
+<h2>
+This page has 1 fact about Shelly.
+</h2>
+
+<!--Images (has links in them)-->
+<div class="row">
+<a href="Shelly.html"><img src="Shelly.png" alt= "A picture of Shelly, the starter brawler."></a>
+</div>
+<p>Shelly is the starter brawler and is the only brawler you can use in the tutorial after makinga new account.</p>
+
+</html>
