--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ If you are  reading this then you are smart-->
 This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click on an image to access a specific brawlers fact.
 </h2>
 
-<!--Image 1 (has link in it)-->
-<a src="Shelly.html">
-<div class="left">
-<img src="Shelly.png" alt= "A picture of Shelly, the starter brawler.">
+<!--Images (has links in them)-->
+<div class="row">
+<a href="Shelly.html"><img src="Shelly.png" alt= "A picture of Shelly, the starter brawler."></a>
+<a href="Nita.html"><img src="Nita.png" alt= "A picture of Nita, a rare brawler."></a>
 </div>
-</a>
+
 
 </html>
