--- a/Shelly.html
+++ b/Shelly.html
@@ -22,9 +22,7 @@ This page has 1 fact about Shelly.
 </h2>
 
 <!--Images (has links in them)-->
-<div class="row">
 <a href="Shelly.html"><img src="Shelly.png" alt= "A picture of Shelly, the starter brawler."></a>
-</div>
-<p>Shelly is the starter brawler and is the only brawler you can use in the tutorial after makinga new account.</p>
-
+<h3>Shelly is the starter brawler and is the only brawler you can use in the tutorial after making a new account.</h3>
+<a><h3>Click here to go back to the main page.</h3></a>
 </html>
