--- a/Shelly.html
+++ b/Shelly.html
@@ -24,5 +24,5 @@ This page has 1 fact about Shelly.
 <!--Images (has links in them)-->
 <a href="Shelly.html"><img src="Shelly.png" alt= "A picture of Shelly, the starter brawler."></a>
 <h3>Shelly is the starter brawler and is the only brawler you can use in the tutorial after making a new account.</h3>
-<a><h3>Click here to go back to the main page.</h3></a>
+<a href = "index.html"><h3>Click here to go back to the main page.</h3></a>
 </html>
