--- a/Nita.html
+++ b/Nita.html
@@ -1,6 +1,4 @@
-<!--Created 15/5/2025
-Last updated 15/5/2025
-Made by Ayan Adhikari
+<!--Made by Ayan Adhikari
 If you are  reading this then you are smart-->
 
 <!DOCTYPE html>
