--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--Created 15/5/2025
-Last updated 15/5/2025
+Last updated 17/5/2025
 Made by Ayan Adhikari
 If you are  reading this then you are smart-->
 
@@ -25,6 +25,10 @@ This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click
 <div class="row">
 <a href="Shelly.html"><img src="Shelly.png" alt= "A picture of Shelly, the starter brawler."></a>
 <a href="Nita.html"><img src="Nita.png" alt= "A picture of Nita, a rare brawler."></a>
+<a href="Colt.html"><img src="Colt.png" alt= "A picture of Colt, a rare brawler."></a>
+<a href="Bull.html"><img src="Bull.png" alt= "A picture of Bull, a rare brawler."></a>
+<a href="Brock.html"><img src="Brock.png" alt= "A picture of Brock, a rare brawler."></a>
+<a href="El_Primo.html"><img src="El_Primo.png" alt= "A picture of El Primo, a rare brawler."></a>
 </div>
 
 
