--- a/Nita.html
+++ b/Nita.html
@@ -6,17 +6,17 @@ If you are  reading this then you are smart-->
 <!--Head + link to css file-->
 <head>
 <title>
-1 Fact About Shelly
+1 Fact About Nita
 </title>
 <link rel="stylesheet" href="style.css">
 </head>
 
 <!--Heading + subheading-->
 <h1>
-1 Fact About Shelly
+1 Fact About Nita
 </h1>
 <h2>
-This page has 1 fact about Shelly.
+This page has 1 fact about Nita.
 </h2>
 
 <!--Images (has links in them)-->
