--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@ This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click
 <a href="Bull.html"><img src="Bull.png" alt= "A picture of Bull, a rare brawler."></a>
 <a href="Brock.html"><img src="Brock.png" alt= "A picture of Brock, a rare brawler."></a>
 <a href="El_Primo.html"><img src="El_Primo.png" alt= "A picture of El Primo, a rare brawler."></a>
+<a href="Barley.html"><img src="Barley.png" alt= "A picture of Barley, a rare brawler."></a>
+<a href="Poco.html"><img src="Poco.png" alt= "A picture of Poco, a rare brawler with a cool guitar."></a>
+<a href="Rosa.html"><img src="Rosa.png" alt= "A picture of Rosa, a rare brawler."></a>
+<a href="Jessie.html"><img src="Jessie.png" alt= "A picture of Jessie, a super rare brawler."></a>
+<a href="Dynamike.html"><img src="Dynamike.png" alt= "A picture of Dynamike, a super rare brawler."></a>
 </div>
 
 
