--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@ This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click
 <a href="Rosa.html"><img src="Rosa.png" alt= "A picture of Rosa, a rare brawler."></a>
 <a href="Jessie.html"><img src="Jessie.png" alt= "A picture of Jessie, a super rare brawler."></a>
 <a href="Dynamike.html"><img src="Dynamike.png" alt= "A picture of Dynamike, a super rare brawler."></a>
+<a href="Tick.html"><img src="Tick.png" alt= "A picture of Tick, a super rare brawler."></a>
+<a href="8-Bit.html"><img src="8-Bit.png" alt= "A picture of 8-Bit, a super rare brawler who is a sigma robot."></a>
+<a href="Rico.html"><img src="Rico.png" alt= "A picture of Rico, a super rare brawler. Rico can shoot his bouncy balls at enemies."></a>
+<a href="Daryl.html"><img src="Daryl.png" alt= "A picture of Daryl, a super rare brawler."></a>
+<a href="Penny.html"><img src="Penny.png" alt= "A picture of Penny, a super rare brawler."></a>
+<a href="Carl.html"><img src="Carl.png" alt= "A picture of Carl, a super rare brawler."></a>
+<a href="Jacky.html"><img src="Jacky.png" alt= "A picture of Jacky, a super rare brawler."></a>
+<a href="Tick.html"><img src="Tick.png" alt= "A picture of Tick, a super rare brawler."></a>
+<a href="Jacky.html"><img src="Jacky.png" alt= "A picture of Jacky, a super rare brawler."></a>
 </div>
 
 
