--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click
 <a href="Carl.html"><img src="Carl.png" alt= "A picture of Carl, a super rare brawler."></a>
 <a href="Jacky.html"><img src="Jacky.png" alt= "A picture of Jacky, a super rare brawler."></a>
 <a href="Tick.html"><img src="Tick.png" alt= "A picture of Tick, a super rare brawler."></a>
-<a href="Jacky.html"><img src="Jacky.png" alt= "A picture of Jacky, a super rare brawler."></a>
+<a href="Gus.html"><img src="Gus.png" alt= "A picture of Gus, a super rare brawler."></a>
+<a href="Bo.html"><img src="Bo.png" alt= "A picture of Bo, an epic brawler."></a>
+<a href="Emz.html"><img src="Emz.png" alt= "A picture of Emz, an epic brawler."></a>
 </div>
 
 
