--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click
 <a href="Gus.html"><img src="Gus.png" alt= "A picture of Gus, a super rare brawler."></a>
 <a href="Bo.html"><img src="Bo.png" alt= "A picture of Bo, an epic brawler."></a>
 <a href="Emz.html"><img src="Emz.png" alt= "A picture of Emz, an epic brawler."></a>
+<a href="idk.html"><img src="idk.png" alt= "A picture of idk, an epic brawler."></a>
+  
+
 </div>
 
 
