--- a/index.html
+++ b/index.html
@@ -45,8 +45,24 @@ This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click
 <a href="Gus.html"><img src="Gus.png" alt= "A picture of Gus, a super rare brawler."></a>
 <a href="Bo.html"><img src="Bo.png" alt= "A picture of Bo, an epic brawler."></a>
 <a href="Emz.html"><img src="Emz.png" alt= "A picture of Emz, an epic brawler."></a>
-<a href="idk.html"><img src="idk.png" alt= "A picture of idk, an epic brawler."></a>
-  
+<a href="Stu.html"><img src="Stu.png" alt= "A picture of Stu, an epic brawler."></a>
+<a href="Piper.html"><img src="Piper.png" alt= "A picture of Piper, an epic brawler."></a>
+<a href="Pam.html"><img src="Pam.png" alt= "A picture of Pam, an epic brawler."></a>
+<a href="Frank.html"><img src="Frank.png" alt= "A picture of Frank, an epic brawler. Frank holds a MASSIVE hammer."></a>
+<a href="Bibi.html"><img src="Bibi.png" alt= "A picture of Bibi, an epic brawler."></a>
+<a href="Bea.html"><img src="Bea.png" alt= "A picture of Bea, an epic brawler."></a>
+<a href="Nani.html"><img src="Nani.png" alt= "A picture of Nani, an epic brawler."></a>
+<a href="Edgar.html"><img src="Edgar.png" alt= "A picture of Edgar, an epic brawler. Edgar is used by 9 years on their mum's phone or dirty Ipad."></a>  
+<a href="Griff.html"><img src="Griff.png" alt= "A picture of Griff, an epic brawler."></a>
+<a href="Grom.html"><img src="Grom.png" alt= "A picture of Grom, an epic brawler."></a>
+<a href="Bonnie.html"><img src="Bonnie.png" alt= "A picture of Bonnie, an epic brawler."></a>
+<a href="Gale.html"><img src="Gale.png" alt= "A picture of Gale, an old man."></a>
+<a href="Collete.html"><img src="Collete.png" alt="A picture of Colette, an epic brawler."></a>
+<a href="Belle.html"><img src="Belle.png" alt= "A picture of Belle, an epic brawler."></a>  
+<a href="Ash.html"><img src="Ash.png" alt= "A picture of Ash, an epic brawler."></a>
+<a href="Lola.html"><img src="Lola.png" alt= "A picture of Lola, an epic brawler."></a>
+<a href="Sam.html"><img src="Sam.png" alt= "A picture of Sam, an epic brawler."></a>
+
 
 </div>
 
