--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--Created 15/5/2025
-Last updated 17/5/2025
+Last updated 28/5/2025
 Made by Ayan Adhikari
 If you are  reading this then you are smart-->
 
@@ -28,7 +28,7 @@ This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click
 <a href="Colt.html"><img src="Colt.png" alt= "A picture of Colt, a rare brawler."></a>
 <a href="Bull.html"><img src="Bull.png" alt= "A picture of Bull, a rare brawler."></a>
 <a href="Brock.html"><img src="Brock.png" alt= "A picture of Brock, a rare brawler."></a>
-<a href="El_Primo.html"><img src="El_Primo.png" alt= "A picture of El Primo, a rare brawler."></a>
+<a href="El_Primo.html"><img src="El_Primo.png" alt= "A picture of El Primo, a rare brawler. By the way this is my main brawler as of 28/05/2025 - Ayan Adhikari (Creator of this website)"></a>
 <a href="Barley.html"><img src="Barley.png" alt= "A picture of Barley, a rare brawler."></a>
 <a href="Poco.html"><img src="Poco.png" alt= "A picture of Poco, a rare brawler with a cool guitar."></a>
 <a href="Rosa.html"><img src="Rosa.png" alt= "A picture of Rosa, a rare brawler."></a>
@@ -43,6 +43,7 @@ This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click
 <a href="Jacky.html"><img src="Jacky.png" alt= "A picture of Jacky, a super rare brawler."></a>
 <a href="Tick.html"><img src="Tick.png" alt= "A picture of Tick, a super rare brawler."></a>
 <a href="Gus.html"><img src="Gus.png" alt= "A picture of Gus, a super rare brawler."></a>
+  
 <a href="Bo.html"><img src="Bo.png" alt= "A picture of Bo, an epic brawler."></a>
 <a href="Emz.html"><img src="Emz.png" alt= "A picture of Emz, an epic brawler."></a>
 <a href="Stu.html"><img src="Stu.png" alt= "A picture of Stu, an epic brawler."></a>
@@ -62,8 +63,65 @@ This website has 1 fact for every brawler in brawl stars(as of 15/5/2025). Click
 <a href="Ash.html"><img src="Ash.png" alt= "A picture of Ash, an epic brawler."></a>
 <a href="Lola.html"><img src="Lola.png" alt= "A picture of Lola, an epic brawler."></a>
 <a href="Sam.html"><img src="Sam.png" alt= "A picture of Sam, an epic brawler."></a>
+<a href="Mandy.html"><img src="Mandy.png" alt= "A picture of Mandy, an epic brawler."></a>
+<a href="Maisie.html"><img src="Maisie.png" alt= "A picture of Maisie, an epic brawler."></a>
+<a href="Hank.html"><img src="Hank.png" alt= "A picture of Hank, an epic brawler."></a>  
+<a href="Pearl.html"><img src="Pearl.png" alt= "A picture of Pearl, an epic brawler."></a>
+<a href="Larry_&_Lawrie.html"><img src="Larry_&_Lawrie.png" alt= "A picture of Larry & Lawrie, an epic brawler."></a>
+<a href="Angelo.html"><img src="Angelo.png" alt= "A picture of Angelo, an epic brawler."></a>
+<a href="Berry.html"><img src="Berry.png" alt= "A picture of Berry, an epic brawler."></a>
+<a href="Shade.html"><img src="Shade.png" alt= "A picture of Shade, an epic brawler."></a>
+<a href="Meeple.html"><img src="Meeple.png" alt= "A picture of Meeple, an epic brawler."></a>
+  
+<a href="Mortis.html"><img src="Mortis.png" alt= "A picture of Mortis, a mythic brawler."></a>
+<a href="Tara.html"><img src="Tara.png" alt= "A picture of Tara, a mythic brawler."></a>
+<a href="Gene.html"><img src="Gene.png" alt= "A picture of Gene, a mythic brawler."></a>
+<a href="Max.html"><img src="Max.png" alt= "A picture of Max, a mythic brawler."></a>
+<a href="Mr_P.html"><img src="Mr_P.png" alt= "A picture of Mr. P, a mythic brawler."></a>  
+<a href="Sprout.html"><img src="Sprout.png" alt= "A picture of Sprout, a mythic brawler."></a>
+<a href="Byron.html"><img src="Byron.png" alt= "A picture of Byron, a mythic brawler."></a>
+<a href="Squeak.html"><img src="Squeak.png" alt= "A picture of Squeak, a mythic brawler."></a>
+<a href="Lou.html"><img src="Lou.png" alt= "A picture of Lou, a mythic brawler."></a>
+<a href="Ruffs.html"><img src="Ruffs.png" alt= "A picture of Ruffs, a mythic brawler."></a>
+<a href="Buzz.html"><img src="Buzz.png" alt= "A picture of Buzz, a mythic brawler."></a>
+<a href="Fang.html"><img src="Fang.png" alt= "A picture of Fang, a mythic brawler."></a>
+<a href="Eve.html"><img src="Eve.png" alt= "A picture of Eve, a mythic brawler."></a>
+<a href="Janet.html"><img src="Janet.png" alt= "A picture of Janet, a mythic brawler."></a>
+<a href="Otis.html"><img src="Otis.png" alt= "A picture of Otis, a mythic brawler."></a>
+<a href="Buster.html"><img src="Buster.png" alt= "A picture of Buster, a mythic brawler."></a>
+<a href="Gray.html"><img src="Gray.png" alt= "A picture of Gray, a mythic brawler."></a>
+<a href="RT.html"><img src="RT.png" alt= "A picture of R-T, a mythic brawler."></a>
+<a href="Willow.html"><img src="Willow.png" alt= "A picture of Willow, a mythic brawler."></a>
+<a href="Doug.html"><img src="Doug.png" alt= "A picture of Doug, a mythic brawler. Doug is a chill guy."></a>
+<a href="Chuck.html"><img src="Chuck.png" alt= "A picture of Chuck, a mythic brawler."></a>
+<a href="Charlie.html"><img src="Charlie.png" alt= "A picture of Charlie, a mythic brawler."></a>
+<a href="Mico.html"><img src="Mico.png" alt= "A picture of Mico, a mythic brawler."></a>
+<a href="Melodie.html"><img src="Melodie.png" alt= "A picture of Melodie, a mythic brawler."></a>
+<a href="Lily.html"><img src="Lily.png" alt= "A picture of Lily, a mythic brawler."></a>
+<a href="Clancy.html"><img src="Clancy.png" alt= "A picture of Clancy, a mythic brawler."></a>
+<a href="Moe.html"><img src="Moe.png" alt= "A picture of Moe, a mythic brawler."></a>
+<a href="Juju.html"><img src="Juju.png" alt= "A picture of Juju, a mythic brawler."></a>
+<a href="Ollie.html"><img src="Ollie.png" alt= "A picture of Ollie, a mythic brawler."></a>
+<a href="Lumi.html"><img src="Lumi.png" alt= "A picture of Lumi, a mythic brawler."></a>
+<a href="Finx.html"><img src="Finx.png" alt= "A picture of Finx, a mythic brawler."></a>
+<a href="Jae_Yong.html"><img src="Jae_Yong.png" alt= "A picture of Jae-Yong, a mythic brawler."></a>
 
+<a href="Spike.html"><img src="Spike.png" alt= "A picture of Spike, a legendary brawler."></a>  
+<a href="Crow.html"><img src="Crow.png" alt= "A picture of Crow, a legendary brawler."></a>
+<a href="Leon.html"><img src="Leon.png" alt= "A picture of Leon, a legendary brawler."></a>
+<a href="Sandy.html"><img src="Sandy.png" alt= "A picture of Sandy, a legendary brawler."></a>
+<a href="Amber.html"><img src="Amber.png" alt= "A picture of Amber, a legendary brawler."></a>
+<a href="Meg.html"><img src="Meg.png" alt= "A picture of Meg, a legendary brawler."></a>
+<a href="Surge.html"><img src="Surge.png" alt= "A picture of Surge, a legendary brawler."></a>
+<a href="Chester.html"><img src="Chester.png" alt= "A picture of Chester, a legendary brawler. Let's go gambling"></a>
+<a href="Cordelius.html"><img src="Cordelius.png" alt= "A picture of Cordelius, a legendary brawler."></a>
+<a href="Kit.html"><img src="Kit.png" alt= "A picture of Kit, a legendary brawler."></a>
+<a href="Draco.html"><img src="Draco.png" alt= "A picture of Draco, a legendary brawler."></a>
+<a href="Kenji.html"><img src="Kenji.png" alt= "A picture of Kenji, a legendary brawler."></a>
 
+<a href="Kaze.html"><img src="Kaze.png" alt= "A picture of Kaze, an ultra-legendary brawler."></a>
+
+<a href="Buzz_Lightyear.html"><img src="Buzz_Lightyear.png" alt= "A picture of Buzz Lightyear, a limited-time brawler."></a>
 </div>
 
 
